WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
56285
StorageTracker - lock fixes - followup for feedback on
https://bugs.webkit.org/show_bug.cgi?id=51878
https://bugs.webkit.org/show_bug.cgi?id=56285
Summary
StorageTracker - lock fixes - followup for feedback on https://bugs.webkit.or...
Anton D'Auria
Reported
2011-03-13 20:39:53 PDT
The primary patch for
https://bugs.webkit.org/show_bug.cgi?id=51878
has already been checked in. To simplify discussion of lock-related fixes in StorageTracker, I am opening this bug. A patch for this bug should address all issues brought up by David Levin here:
https://bugs.webkit.org/show_bug.cgi?id=51878#c93
Attachments
Patch
(11.62 KB, patch)
2011-03-13 21:04 PDT
,
Anton D'Auria
beidson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anton D'Auria
Comment 1
2011-03-13 21:04:08 PDT
Created
attachment 85640
[details]
Patch StorageTracker::scheduleTask() was correct but not very readable.
David Levin
Comment 2
2011-03-13 22:58:46 PDT
I would have liked to have had a chance to review this since it is addressing my comments :( There were already several mistakes in previous iterations which I caught.
Brady Eidson
Comment 3
2011-03-13 23:02:56 PDT
(In reply to
comment #2
)
> I would have liked to have had a chance to review this since it is addressing my comments :( > > There were already several mistakes in previous iterations which I caught.
Sorry about that, such a desire wasn't present in this bug. You're still allowed to review - bonus points if it's tonight... :)
David Levin
Comment 4
2011-03-13 23:14:47 PDT
Comment on
attachment 85640
[details]
Patch Looks fine to me too. Thanks for waiting. I just wanted to see this through and do my best to verify correctness. Hopefully this will help you in the end. (I caught several issues which could have led to instability here.)
Brady Eidson
Comment 5
2011-03-13 23:24:26 PDT
Comment on
attachment 85640
[details]
Patch Landing manually to help some colleagues get at it before the commit queue wakes up.
Brady Eidson
Comment 6
2011-03-13 23:25:08 PDT
landed in
r81003
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug